--- a/biz.webgate.notes.mailsignaturemanager/AppProperties/database.properties
+++ b/biz.webgate.notes.mailsignaturemanager/AppProperties/database.properties
@@ -1,13 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
 <database xmlns='http://www.lotus.com/dxl' version='9.0' replicaid='C1257C1E002C398C'
  path='CN=CGU_SRV9/O=WGCDEV/C=CH!!Development\SigMan\wgc_mailsigman.nsf' title='WGC Signature Manager'
- templatename='blubber' fromtemplate='WGC.SignatureManager v2.2' allowstoredforms='false'
- maintainunread='false' allowsoftdeletion='true' increasemaxfields='true'
- uselz1='true'>
-<databaseinfo dbid='C1257C1E002C398C' odsversion='43' diskspace='14942208'
- percentused='97.8481359649123' numberofdocuments='513'><datamodified><datetime
->20131109T090332,84+01</datetime></datamodified><designmodified><datetime
->20131109T091013,03+01</datetime></designmodified></databaseinfo>
+ templatename='WGC.SignatureManager v3.0.0' allowstoredforms='false' maintainunread='false'
+ allowsoftdeletion='true' increasemaxfields='true' uselz1='true'>
+<databaseinfo dbid='C1257C1E002C398C' odsversion='43' diskspace='17301504'
+ percentused='97.7820194128788' numberofdocuments='513'><datamodified><datetime
+>20131110T040109,62+01</datetime></datamodified><designmodified><datetime
+>20131111T093540,92+01</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=WGHub01/O=WGC/C=CH' maxinternetaccess='editor'>
 <role>[DbAdmin]</role>
 <role>[Server]</role>
@@ -77,11 +76,11 @@
 <launchsettings><noteslaunch whenopened='openframeset' frameset='fsNotesMain'
  showaboutdocument='never'/><weblaunch whenopened='openframeset' frameset='sysFsWeb'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='112' unid='B6E3E1A9B84618B3C12576A50028682C' sequence='199'>
+<noteinfo noteid='112' unid='B6E3E1A9B84618B3C12576A50028682C' sequence='204'>
 <created><datetime>20100108T082121,08+01</datetime></created>
-<modified><datetime>20131109T090316,27+01</datetime></modified>
-<revised><datetime>20131109T090316,26+01</datetime></revised>
-<lastaccessed><datetime>20131109T090316,27+01</datetime></lastaccessed>
+<modified><datetime>20131109T093847,69+01</datetime></modified>
+<revised><datetime>20131109T093847,68+01</datetime></revised>
+<lastaccessed><datetime>20131109T093847,69+01</datetime></lastaccessed>
 <addedtofile><datetime>20131109T090303,58+01</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Marco Baumann/O=IDESO</name><name>CN=Peter Luder/O=IDESO</name><name
 >CN=Marco Baumann/O=IDESO</name><name>CN=Peter Luder/O=IDESO</name><name>CN=Marco Baumann/O=IDESO</name><name
@@ -149,11 +148,11 @@ EREREREREREREREREREREREREQ==
 <item name='$TemplateServerName' sign='true'><text>CN=Marco Baumann/O=WGC/C=CH</text></item>
 <item name='$PIRCRefreshModTime' sign='true'><datetime dst='true'>20120815T160351,56+02</datetime></item>
 <item name='$TemplateModTime' sign='true'><datetime dst='true'>20120815T113752,66+02</datetime></item>
-<item name='$Flags'><text>JFZzSn47f</text></item>
-<item name='$FlagsNoRefresh' sign='true'><text/></item>
 <item name='$Daos'><text>0</text></item>
+<item name='$Flags'><text>JFZzSn47f</text></item>
+<item name='$LaunchXPageRunOnServer'><text>0</text></item>
+<item name='$FlagsNoRefresh'><text/></item>
 <item name='$TITLE'><text>WGC Signature Manager
-#1blubber
-#2WGC.SignatureManager v2.2</text></item></note>
+#1WGC.SignatureManager v3.0.0</text></item></note>
 </database>
 
